k8s/10-rules-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rules-service
  namespace: rick
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rules-service
  template:
    metadata:
      labels:
        app: rules-service
    spec:
      containers:
        - name: rules-service
          image: 535806374724.dkr.ecr.us-east-1.amazonaws.com/rules-service:v0.1.1
          ports:
            - containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: rules-service
  namespace: rick
spec:
  type: ClusterIP
  selector:
    app: rules-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
# 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 # gitleaks:allow
