k8s/20-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: rick
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 535806374724.dkr.ecr.us-east-1.amazonaws.com/web:v0.1.0
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: rick
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
